--- a/package.json
+++ b/package.json
@@ -1,85 +1,19 @@
 {
-  "name": "ui-theme",
-  "theme": "ui",
-  "version": "1.4.0",
-  "description": "A dark colored UI theme for Atom with custom file icons.",
-  "main": "lib/main",
+  "name": "atom-dark-sexy-dim-ui-theme",
+  "theme": "syntax",
+  "version": "0.0.0",
+  "description": "It will be created for a productive night coding. Low contrast is good for vitality of your eyes.",
+  "keywords": [
+    "dark",
+    "dim",
+    "sexy",
+    "low contrast",
+    "syntax",
+    "theme"
+  ],
+  "repository": "https://github.com/alexiTakov/atom-dark-sexy-dim-theme-syntax",
   "license": "MIT",
-  "repository": "https://github.com/jesseweed/seti-ui",
   "engines": {
-    "atom": ">1.12.0"
-  },
-  "configSchema": {
-    "themeColor": {
-      "title": "Theme Color",
-      "order": 1,
-      "description": "Select a default theme color. If you don't notice a difference, you may have to reload Atom to see them.",
-      "type": "string",
-      "enum": [
-        "Blue",
-        "Green",
-        "Orange",
-        "Pink",
-        "Purple",
-        "Red",
-        "Steel",
-        "Yellow"
-      ],
-      "default": "Blue"
-    },
-    "font": {
-      "title": "Font Family",
-      "order": 2,
-      "description": "Select default UI font.",
-      "type": "string",
-      "enum": [
-        "Roboto",
-        "Default Atom Font"
-      ],
-      "default": "Roboto"
-    },
-    "compactView": {
-      "title": "Compact Mode",
-      "order": 3,
-      "description": "Enable this is you prefer less padding in your workspace.",
-      "type": "boolean",
-      "default": false
-    },
-    "disableAnimations": {
-      "title": "Disable Animations",
-      "order": 4,
-      "description": "Select this if you want to disable animations.",
-      "type": "boolean",
-      "default": false
-    },
-    "fileIcons": {
-      "title": "Custom Icons",
-      "order": 5,
-      "description": "Disable this if you are using file-icons or another atom file icon package (or simply don't want custom icons)",
-      "type": "boolean",
-      "default": true
-    },
-    "displayIgnored": {
-      "title": "Display Ignored Files",
-      "order": 6,
-      "description": "Enable this if you would like to not see ignored files at all (as opposed to simple muting the style)",
-      "type": "boolean",
-      "default": true
-    },
-    "hideTabs": {
-      "title": "Hide Tabs",
-      "order": 7,
-      "description": "Enable this if you prefer to rely on the sidebar for nagivation and don't want to see tabs at all.",
-      "type": "boolean",
-      "default": false
-    }
-  },
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-iconfont": "^6.0.0",
-    "gulp-iconfont-css": "^2.1.0"
-  },
-  "dependencies": {
-    "gulp-svgmin": "^1.2.3"
+    "atom": ">=1.0.0 <2.0.0"
   }
 }
