--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atom-dark-sexy-dim-ui-theme",
-  "theme": "syntax",
+  "theme": "ui-theme",
   "version": "0.1.1",
   "description": "It will be created for a productive night coding. Low contrast is good for vitality of your eyes.",
   "keywords": [
